kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  labels:
    app: frontend
  name: hipster-shop-frontend
  namespace: hipster-shop
spec:
  rules:
  - host: shop-35-193-44-147.sslip.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
        path: /
  tls:
  - hosts:
    - shop-35-193-44-147.sslip.io
    secretName: shop-35-193-44-147.sslip.io
